test/fail/repeated5.min
program start
    number n; number m; number n;
end
